build: removed carbon ads, replaced by adsense

--- a/404.html
+++ b/404.html
@@ -91,7 +91,11 @@
             integrity="sha256-NP9NujdEzS5m4ZxvNqkcbxyHB0dTRy9hG13RwTVBGwo="
             crossorigin="anonymous"
         ></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901" crossorigin="anonymous"></script>
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901"
+            crossorigin="anonymous"
+        ></script>
         <script defer src="https://cdn.jsdelivr.net/npm/tsparticles@3.8.1/tsparticles.bundle.min.js"></script>
         <script defer src="/js/404.min.js"></script>
     </body>
