--- a/samples/index.html
+++ b/samples/index.html
@@ -610,7 +610,11 @@
                 y.parentNode.insertBefore(t, y);
             })(window, document, "clarity", "script", "8q4bxin4tm");
         </script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901" crossorigin="anonymous"></script>
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901"
+            crossorigin="anonymous"
+        ></script>
         <script
             defer
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
