--- a/samples/presets/index.html
+++ b/samples/presets/index.html
@@ -40,7 +40,7 @@
             integrity="sha256-T/zFmO5s/0aSwc6ics2KLxlfbewyRz6UNw1s3Ppf5gE="
             crossorigin="anonymous"
         />
-        
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-922Z47NPS0"></script>
         <script>
@@ -241,7 +241,11 @@
                 y.parentNode.insertBefore(t, y);
             })(window, document, "clarity", "script", "8q4bxin4tm");
         </script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901" crossorigin="anonymous"></script>
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901"
+            crossorigin="anonymous"
+        ></script>
         <script
             defer
             src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"
