--- a/samples/presets/links.html
+++ b/samples/presets/links.html
@@ -67,7 +67,11 @@
                 y.parentNode.insertBefore(t, y);
             })(window, document, "clarity", "script", "8q4bxin4tm");
         </script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901" crossorigin="anonymous"></script>
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901"
+            crossorigin="anonymous"
+        ></script>
         <script src="https://cdn.jsdelivr.net/npm/@tsparticles/preset-links@3.2.0/tsparticles.preset.links.bundle.min.js"></script>
         <script type="text/javascript">
             (async (engine) => {
