--- a/samples/presets/stars.html
+++ b/samples/presets/stars.html
@@ -37,7 +37,7 @@
             tsParticles | Stars Preset | JavaScript Particles, Confetti and Fireworks animations for your website
         </title>
         <link rel="stylesheet" href="/css/presets.min.css" />
-        
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-922Z47NPS0"></script>
         <script>
@@ -67,7 +67,11 @@
                 y.parentNode.insertBefore(t, y);
             })(window, document, "clarity", "script", "8q4bxin4tm");
         </script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901" crossorigin="anonymous"></script>
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901"
+            crossorigin="anonymous"
+        ></script>
         <script src="https://cdn.jsdelivr.net/npm/@tsparticles/preset-stars@3.2.0/tsparticles.preset.stars.bundle.min.js"></script>
         <script type="text/javascript">
             (async (engine) => {
