--- a/index.html
+++ b/index.html
@@ -634,8 +634,11 @@
             src="https://connect.facebook.net/it_IT/sdk.js#xfbml=1&version=v10.0&appId=130672560341873&autoLogAppEvents=1"
             nonce="jC6Fjy00"
         ></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901"
-     crossorigin="anonymous"></script>
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901"
+            crossorigin="anonymous"
+        ></script>
         <script defer src="https://cdn.jsdelivr.net/npm/@tsparticles/all@3.8.1/tsparticles.all.bundle.min.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/object-gui@2.0.2/dist/js/object-gui.min.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/@tsparticles/editor@3.1.1/tsparticles.editor.min.js"></script>
