--- a/video.html
+++ b/video.html
@@ -120,7 +120,11 @@
                 y.parentNode.insertBefore(t, y);
             })(window, document, "clarity", "script", "8q4bxin4tm");
         </script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901" crossorigin="anonymous"></script>
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901"
+            crossorigin="anonymous"
+        ></script>
         <script
             defer
             src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"
