--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 >
                     <div class="d-md-none d-block mt-5">&nbsp;</div>
                     <div class="row mb-4">
-                        <div class="col-lg-6 col-md-4 text-center order-md-2 order-1">
+                        <div class="offset-lg-3 col-lg-6 offset-md-4 col-md-4 text-center order-md-2 order-1">
                             <div class="row mb-4">
                                 <div class="col text-center">
                                     <h1
